# mir

./: .gitignore  CMakeLists.txt  README.md
include/: Dicom.hpp  Volume.hpp  camera.h  disney.h  math.hpp  plf.h  ray.h  rng.h
src/: Dicom.cpp  Volume.cpp  camera.cpp  disney.cpp  main.cpp  plf.cpp  rng.cpp
